...
        android:layout_height="wrap_content"
        android:text="@string/header_login"
        android:layout_marginBottom="30dp"
        style="@style/PoppinsTitleText22" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_address"
        app:endIconMode="clear_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        style="@style/HintColor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/PoppinsBodyText14" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        app:endIconMode="password_toggle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        style="@style/HintColor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/PoppinsBodyText14"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/login"
        style="@style/ButtonWithoutShadow"/>

...
