<resources>
    <string name="app_name">Personal Inventory Manager</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="get_started">Get Started</string>
    <string name="personal_inventory_manager">Personal \nInventory Manager</string>
    <string name="description">Helping You Manage Your \nBelongings Efficiently</string>
    <string name="items">Items</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="header_login">Login To Account</string>
    <string name="login">Login</string>
    <string name="login_register">Register Account</string>
    <string name="header_register">Register An Account</string>
    <string name="submit_register">Submit</string>
    <string name="register_success">Account \nSuccessfully Registered!</string>
    <string name="proceed_login">Proceed To Login Page</string>
    <string name="logout">Logout</string>
    <string name="edit">Edit</string>
    <string name="favorite">Favorite</string>
    <string name="more">More</string>
    <string name="inventory_title">Inventory</string>
    <string name="searchbar">Search</string>
    <string name="settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="capture">Capture</string>
    <string name="choose_image">Choose Image</string>
    <string name="object_detection">Object Detection</string>
    <string name="skip">Skip Image</string>
    <string name="item_image">Item Image</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_value">1</string>
    <string name="item_price">Price</string>
    <string name="Item_last_location">Last Location</string>
    <string name="item_category">Category</string>
    <string name="item_description">Description</string>
    <string name="edit_item">Edit Item</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="edit_item_image">Edit Image</string>
    <string name="content_description_search">Search</string>
    <string name="content_description_favorite">Favorite</string>
    <string name="content_description_more">More</string>
    <string name="content_description_logout">Logout</string>
    <string name="content_description_settings">Opens Settings</string>
    <string name="content_description_add_item">Add Item</string>
    <string name="content_description_update_item">Update Item</string>
    <string name="content_description_add_item_image">add item image</string>
    <string name="content_description_edit_item_image">Edit Item Image Icon</string>
    <string name="default_price_value">0.0</string>
    <string name="change_username">Change Username</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="change_image">Change Image</string>
    <string name="Default">Default</string>

</resources>