<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:transitionGroup="true"
    tools:context=".gettingstarted.RegisterFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/header_register"
        android:layout_marginBottom="30dp"
        style="@style/PoppinsTitleText22" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        app:endIconMode="clear_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        style="@style/HintColor" >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            style="@style/PoppinsBodyText14"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_address"
        app:endIconMode="clear_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        style="@style/HintColor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_address_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            style="@style/PoppinsBodyText14"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        app:endIconMode="password_toggle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        style="@style/HintColor">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            style="@style/PoppinsBodyText14"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_register"
        android:minHeight="48dp"
        style="@style/ButtonWithoutShadow"/>

</LinearLayout>