...
        android:id="@+id/loginFragment"
        android:name="com.example.inventorymanager.gettingstarted.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.inventorymanager.gettingstarted.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
...
